builder/tests/22-repeated-field-with-no-generic-args.stderr
error: expected standard Vec
 --> tests/22-repeated-field-with-no-generic-args.rs:8:12
  |
8 |     field: Vec,
  |            ^^^
