builder/tests/22-repeated-field-with-no-generic-args.rs
use derive_builder::Builder;

struct Vec;

#[derive(Builder)]
struct Test {
    #[builder(each = "whatever")]
    field: Vec,
}

fn main() {}
